:adhesive_bandage:MODIFIED 'style.css' on 'UNES'. Fix image align.
Modificado:
* './projetos/projeto-1_Unes/config/css/style.css'.
** Ajuste de imagem para corrigir alinhamento do cabeçalho.

--- a/projetos/projeto-1_Unes/config/css/style.css
+++ b/projetos/projeto-1_Unes/config/css/style.css
@@ -31,7 +31,7 @@ body {
 img {
     max-width: 100%;
     display: flex;
-    margin: 0 auto;
+    margin: 0 right;
 }
 
 a {
